# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-09-07 Michael Truog   <mjtruog at protonmail dot com>

    * Improvements to CloudI release scripts
        * reboot command checks the vm.args for -heart
        * erl_crash.dump is always written (with or without -heart)
        * heart defaults are constants

2018-09-01 Michael Truog   <mjtruog at protonmail dot com>

    * Fix small error in Python and Python/C msg_size source code
    * Improve programmatic Python version checking

2018-08-25 Michael Truog   <mjtruog at protonmail dot com>

    * Convert the CloudI Service API dashboard code_path.html 
      and log_settings.html to utilize JSON responses from
      cloudi_service_api_requests
    * Fix the CloudI Service API functions logging_syslog_set and
      logging_formatters_set so undefined is a valid parameter

2018-08-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add fields to the CloudI Service API code_status function
      (runtime_start, runtime_clock, runtime_clock_offset)
    * Update the cloudi_service_api:code_status type specification
    * Add cloudi_timestamp:seconds_to_string/2 and
      cloudi_timestamp:nanoseconds_to_string/2
    * Convert the CloudI Service API dashboard nodes.html to
      utilize JSON responses from cloudi_service_api_requests

2018-08-11 Michael Truog   <mjtruog at protonmail dot com>

    * Remove Erlang string module use in autoconf macros
    * Add field to the CloudI Service API code_status function
      (build_cloudi_cxx_dependencies_versions)

2018-08-05 Michael Truog   <mjtruog at protonmail dot com>

    * Add field to the CloudI Service API code_status function
      (build_cloudi_cxx_compiler_version)
    * Fix rebar2 compilation warning

2018-08-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add fields to the CloudI Service API code_status function
      (build_cloudi_time, build_erlang_erts_c_compiler_version,
       install_erlang_erts_time,