@@ -158,8 +158,9 @@
           $("#hostname").val("localhost:6464");
 
           // change the table attributes to support jQuery styles
-          $('#services_table').dataTable( {
-              "bJQueryUI" : true, "sPaginationType" : "full_numbers"
+          $('#services_table').dataTable({
+              "bJQueryUI" : true,
+              "sPaginationType" : "full_numbers"
           });
 
           // clear the table upon first displaying the page
